--- a/package.json
+++ b/package.json
@@ -44,16 +44,17 @@
         }
     },
     "devDependencies": {
-        "prettier": "^2.7.1",
-        "tslint": "^6.1.3",
-        "tslint-config-prettier": "^1.18.0",
-        "typescript": "^4.7.4",
         "@types/chai": "^4.3.4",
         "@types/mocha": "^10.0.1",
         "chai": "^4.3.7",
-        "mocha": "^10.2.0"
+        "mocha": "^10.2.0",
+        "prettier": "^2.7.1",
+        "tslint": "^6.1.3",
+        "tslint-config-prettier": "^1.18.0",
+        "typescript": "^4.7.4"
     },
     "dependencies": {
+        "just-clone": "6.2.0",
         "ts-node": "^10.9.1"
     }
 }
